# ztnetstring

./: AUTHORS  INSTALL  Makefile.am  README.md  autogen.sh  build.sh  configure.ac
doc/: Makefile.am  asciidoc.conf  mkman
include/: myp_mystatefulmod.h  myp_mystatelessmod.h  syn_tnetstr.h  synocracy.h  ztnetstr.h  ztns_impl.h
src/: Makefile.am  libsynocracy.la  libsynocracy.pc  libsynocracy.pc.in  libztnetstr.la  libztnetstr.pc  libztnetstr.pc.in  myp_mystatefulmod.c  myp_mystatelessmod.c  selftest  syn_tnetstr.c  synocracy  synocracy.c  synocracy_selftest.c  ztnetstr  ztnetstr.c  ztnetstr_selftest.c  ztns_impl.c
